fixed overlapping button bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -98,4 +98,12 @@ img {
         padding-top: 0%;
         width: 95%;
     }
+
+    .footer {
+        position: relative;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: 1rem;
+    }
 }
